@@ -155,6 +155,9 @@
       <name>Kandarp Shah</name>
     </contributor>
     <contributor>
+      <name>Francois Staes</name>
+    </contributor>
+    <contributor>
       <name>Maxim Zhao</name>
     </contributor>
   </contributors>
