@@ -20,6 +20,7 @@ of restrictions. If the license causes you problems please contact the mailing l
 
 Enhancements since 1.4
 ----------------------
+- Performance enhancement to comparison of LocalDate, LocalTime and LocalDateTime
 
 
 Compatibility with 1.4
